--- a/arithmeticoperation/pom.xml
+++ b/arithmeticoperation/pom.xml
@@ -46,6 +46,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>Spring-Boot-aws-exe</finalName>
 	</build>
 
 </project>
