--- a/arithmeticoperation-1/src/main/resources/application.properties
+++ b/arithmeticoperation-1/src/main/resources/application.properties
@@ -1,7 +1,8 @@
+server.port=8090
 spring.datasource.url=jdbc:mysql://localhost:3306/sboot
 spring.datasource.username=root
 spring.datasource.password=Sarkmd@1984
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false 
 spring.jpa.show-sql=true
